--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import './styles//colorPalette.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'PT Sans', 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,4 +7,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  background-color: var(--color-bg-2);
+}
+
+.main-app-container {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
