--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -10,3 +10,22 @@
   align-items: center;
   background-color: var(--color-bg-0);
 }
+
+.footer-link {
+  padding: 10px;
+  border: 1px solid var(--color-accent);
+  justify-self: flex-start;
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 16px;
+  color: var(--color-accent)
+}
+
+.footer-link:hover {
+  background-color: var(--color-accent);
+  color: var(--color-bg-0)
+}
+
+.footer-link:active {
+  opacity: 0.7;
+}
